Bug 411716 - Amarok crashes when Add to Collections dialog is closed.
Summary: Amarok crashes when Add to Collections dialog is closed.
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: File Browser (other bugs)
Version First Reported In: kf5
Platform: openSUSE Linux
: NOR crash
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-08 14:20 UTC by Achim Herwig
Modified: 2020-04-11 15:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kcrash info as attachment (was too large to directly file bug...) (76.98 KB, text/plain)
2019-09-08 14:20 UTC, Achim Herwig
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Achim Herwig 2019-09-08 14:20:24 UTC
Created attachment 122540 [details]
kcrash info as attachment (was too large to directly file bug...)

I tried to move a directory with mp3s to the Collection. The dialog window was opened to a tiny size and could only be enlarged a little, not enough to reach standard buttons. When I close the dialog (through the WM), amarok always crashes.

The crash can be reproduced every time.
Comment 1 Myriam Schweingruber 2019-09-13 15:49:27 UTC
Unfortunately there are no debugging symbols to make the backtrace useful. Please install those and paste the output inline, only the part with the [KCrash Handler] is needed. See also https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
Comment 2 Bug Janitor Service 2019-09-28 04:33:09 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Bug Janitor Service 2019-10-13 04:33:14 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 4 Pedro de Carvalho Gomes 2020-04-11 15:10:49 UTC
Git commit 96eaac4fc0996328f8f218a178a7e216623b2266 by Pedro de Carvalho Gomes.
Committed on 11/04/2020 at 15:00.
Pushed by pgomes into branch 'master'.

Fix copying and moving files to collection

Summary:
The importation of files to collections was not working. Both because its dialogs were crashing and because the copying method was wrong. This patch does the following:

- fix the crash of confirmation dialog when either accepting or rejecting the import. The crash was caused because a "detroyed" signal was being used at a chain of deleted widgets, eventually causing a crash signal
- fix the file copying (SqlCollectionLocation.cpp). The code was using a QURL (with the "file:///" scheme) to locate the destination, and thus failing to find the destination dir
- fix the layout of Transcoding dialog. Before the buttonbox was doubled, and only the KPageDialog was being show. And was overlapped by another widget
fix the layout of the importation configuration menu (OrganizeCollectionDialog). Before the QDialog didn't have a layout, and resizing the window was not resizing widgets
- restore the importation menu to "Copy to Collection". Before only "Move to Collection" was popping up an importation dialog. The reason was a wrong connection of signals

Reviewers: #amarok, amarok-devel, heikobecker

Reviewed By: #amarok, heikobecker

Subscribers: #amarok, heikobecker, amarok-devel

Differential Revision: https://phabricator.kde.org/D28593

M  +1    -1    src/browsers/filebrowser/FileView.cpp
M  +1    -1    src/core-impl/collections/db/sql/SqlCollectionLocation.cpp
M  +8    -4    src/dialogs/OrganizeCollectionDialog.cpp
M  +2    -7    src/transcoding/TranscodingAssistantDialog.cpp
M  +1    -1    src/transcoding/TranscodingAssistantDialog.ui
M  +2    -2    src/transcoding/TranscodingPropertySliderWidget.cpp
M  +3    -2    src/widgets/TokenDropTarget.cpp

https://commits.kde.org/amarok/96eaac4fc0996328f8f218a178a7e216623b2266