Fix copying and moving files to collection

Summary:
The importation of files to collections was not working. Both because its dialogs were crashing and because the copying method was wrong. This patch does the following:

- fix the crash of confirmation dialog when either accepting or rejecting the import. The crash was caused because a "detroyed" signal was being used at a chain of deleted widgets, eventually causing a crash signal
- fix the file copying (SqlCollectionLocation.cpp). The code was using a QURL (with the "file:///" scheme) to locate the destination, and thus failing to find the destination dir
- fix the layout of Transcoding dialog. Before the buttonbox was doubled, and only the KPageDialog was being show. And was overlapped by another widget
fix the layout of the importation configuration menu (OrganizeCollectionDialog). Before the QDialog didn't have a layout, and resizing the window was not resizing widgets
- restore the importation menu to "Copy to Collection". Before only "Move to Collection" was popping up an importation dialog. The reason was a wrong connection of signals

Reviewers: #amarok, amarok-devel, heikobecker

Reviewed By: #amarok, heikobecker

Subscribers: #amarok, heikobecker, amarok-devel

BUG: 411716

Differential Revision: https://phabricator.kde.org/D28593