src/widgets/TokenDropTarget.cpp
@@ -93,6 +93,8 @@ TokenDropTarget::clear()
     QList< Token *> allTokens = tokensAtRow();
     foreach( Token* token, allTokens )
         delete token;
+
+    Q_EMIT changed();
 }
 
 int
@@ -204,8 +206,7 @@ TokenDropTarget::insertToken( Token *token, int row, int col )
 
     connect( token, &Token::changed, this, &TokenDropTarget::changed );
     connect( token, &Token::gotFocus, this, &TokenDropTarget::tokenSelected );
-    connect( token, &Token::destroyed, this, &TokenDropTarget::changed );
-    connect( token, &Token::destroyed, this, &TokenDropTarget::deleteEmptyRows );
+    connect( token, &Token::changed, this, &TokenDropTarget::deleteEmptyRows );
 
     Q_EMIT changed();
 }
